downgraded consul version

--- a/apm/docker-compose.yml
+++ b/apm/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     # ports:
     #   - "3001:3001"
     network_mode: "host"
-    command: ["server", "-p", "3111", "--node", "${NODE_HOST}", "--production", "--prod-config-file", "/core/config.json"]
+    command: ["server", "-p", "3001", "--node", "${NODE_HOST}", "--production", "--prod-config-file", "/core/config.json"]
     depends_on:
       - sync
       - monit
@@ -61,9 +61,12 @@ services:
       - ${PROD_CONFIG_FILE}:/core/config.json
 
   consul:
-    image: consul:latest
+    image: consul:1.6.2
     network_mode: "host"
-    command: consul agent -dev -config-dir=/consul/config
+    # ports:
+    #   - 8500:8500
+    #   - 8600:8600
+    command: consul agent -dev -config-dir=/consul/config -bind 0.0.0.0
     volumes:
       - ./consul-config.json:/consul/config/config.json
       # - ./consul/data:/consul/data
