--- a/apm/docker-compose.yml
+++ b/apm/docker-compose.yml
@@ -60,7 +60,7 @@ services:
   consul:
     image: consul:1.6.2
     network_mode: "host"
-    command: consul agent -dev -config-dir=/consul/config -bind 127.0.0.1
+    command: consul agent -dev -config-dir=/consul/config
     volumes:
       - ./consul-config.json:/consul/config/config.json
       # - ./consul/data:/consul/data
