seperated apm and interface

--- a/apm/config.json
+++ b/apm/config.json
@@ -41,6 +41,13 @@
     }
   ],
   "deRegisterServices": {
+    "cosmos": [],
+    "iov": [],
+    "kava": [],
+    "commit": [],
+    "certik": [],
+    "band": [],
+    "sentinel": []
   },
   "heathChecksThresholdLimits": {
     "lastBlockTime": {
